--- a/public/views/game-code-wrong.html
+++ b/public/views/game-code-wrong.html
@@ -13,7 +13,10 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/views/style.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="/views/favicon.ico" />
+
     <title>🅱️eopardy</title>
+    
   </head>
   <body>
     <h1>
