--- a/public/views/game-host.html
+++ b/public/views/game-host.html
@@ -21,6 +21,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/views/style.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="/views/favicon.ico" />
 
     <title>🅱️eopardy</title>
 
